[EDELIVERY-1433] added distribution config for wildfly12